--- a/index.html
+++ b/index.html
@@ -16,43 +16,27 @@
             <div><a class="logo-header" href="#email">U-tours@email.com</a></div>
         </div>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-solid">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="our-tours.html" id="navbarDropdownMenuLink"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Our tours
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="our-tours.html">City tours</a></li>
-                                <li><a class="dropdown-item" href="our-tours.html">Nature tourism</a></li>
-                                <li><a class="dropdown-item" href="our-tours.html">Extreme tours</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#services">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#reviews">Reviews</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about-us">About us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contacts">Contacts</a>
-                        </li>
-                    </ul>
+       
+            
+<!--MODAL WINDOW 
+        <div class="modal-container-window" id="modal">
+            <div class="modal-nav-menu">
+                <div class="modal-header-menu">
+                    <button class="close-btn" id="close"> ✖ </button>
+                    <img src="img/u-tour-logo.png" alt="logo">
+                    <div class="modal-content-nav-menu">
+                        <ul class="main-nav-menu">
+                            <li><a href="our-tours.html"> Our tours</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#reviews">Reviews</a></li>
+                            <li><a href="#about-us">About us</a></li>
+                            <li><a href="#contact">Contacts</a></li>
+                    </div>
                 </div>
             </div>
+        </div>
+        -->
 
-        </nav>
         <div class="banner">
             <h1>U Tours</h1>
             <p class="text-header">Spectacular tours around Ukraine: cities, nature, experiences</p>
@@ -77,5 +61,6 @@
         </div>
         <!--Tanya Tkach block end-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+     <script src="js/index.js"></script>
 </body>
 </html>
