--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
@@ -15,9 +15,20 @@
             <div><img src="img/u-tour-logo.png" alt="logo"></div>
             <div><a class="logo-header" href="#email">U-tours@email.com</a></div>
         </div>
-
-       
-            
+       <div class="navbar">
+                <div class="dropdown">
+                    <button class="dropbtn">Our Tours</button>
+                    <div class="dropdown-content">
+                        <a href="our-tours.html">City-Tours</a>
+                        <a href="index.html#our-tours">Nature Tourism</a>
+                        <a href="index.html#our-tours">Extreme Tours</a>
+                    </div>
+                </div>
+                <a href="index.html#additionalservices">Services</a>
+                <a href="index.html#customers-text-block-egypt">Reviews</a>
+                <a href="index.html">About Us</a>
+                <a href="index.html#contacts">Contacts</a>
+            </div>
 <!--MODAL WINDOW 
         <div class="modal-container-window" id="modal">
             <div class="modal-nav-menu">
