modal window code

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="logo-header">Tours in Ukraine</div>
             <div><img src="img/u-tour-logo.png" alt="logo"></div>
             <div><a class="logo-header" href="#email">U-tours@email.com</a></div>
+            <button class="open-btn" id="open">☰</button>
         </div>
        <div class="navbar">
                 <div class="dropdown">
@@ -29,7 +30,7 @@
                 <a href="index.html">About Us</a>
                 <a href="index.html#contacts">Contacts</a>
             </div>
-<!--MODAL WINDOW 
+<!--MODAL WINDOW-->
         <div class="modal-container-window" id="modal">
             <div class="modal-nav-menu">
                 <div class="modal-header-menu">
@@ -42,11 +43,13 @@
                             <li><a href="#reviews">Reviews</a></li>
                             <li><a href="#about-us">About us</a></li>
                             <li><a href="#contact">Contacts</a></li>
+                            <li class="logo-header">Tours in Ukraine</li>
+                            <li><a class="logo-header" href="#email">U-tours@email.com</a></li>
                     </div>
                 </div>
             </div>
         </div>
-        -->
+        
 
         <div class="banner">
             <h1>U Tours</h1>
@@ -71,7 +74,6 @@
             <img class="about-image" src="img/build.jpg" alt="build">
         </div>
         <!--Tanya Tkach block end-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
      <script src="js/index.js"></script>
 </body>
 </html>
