--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
      <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
@@ -16,20 +16,30 @@
             <div><a class="logo-header" href="#email">U-tours@email.com</a></div>
             <button class="open-btn" id="open">☰</button>
         </div>
-       <div class="navbar">
-                <div class="dropdown">
-                    <button class="dropbtn">Our Tours</button>
-                    <div class="dropdown-content">
-                        <a href="our-tours.html">City-Tours</a>
-                        <a href="index.html#our-tours">Nature Tourism</a>
-                        <a href="index.html#our-tours">Extreme Tours</a>
-                    </div>
-                </div>
-                <a href="index.html#additionalservices">Services</a>
-                <a href="index.html#customers-text-block-egypt">Reviews</a>
-                <a href="index.html">About Us</a>
-                <a href="index.html#contacts">Contacts</a>
-            </div>
+        <nav>
+          <ul class="nav nav-pills">
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+    </ul>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+ <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+</ul>
+</nav>
 <!--MODAL WINDOW-->
         <div class="modal-container-window" id="modal">
             <div class="modal-nav-menu">
@@ -60,6 +70,7 @@
         <div class="about">
             <div class="white-color">
                 <h2 class="logo-main">About us</h2>
+                <span class="point">....</span>
                 <p>U Trours is your local travel expert and tour operator, offering unforgettable handcrafted tours all
                     over
                     Ukraine. Our company specializes in small group tours with guaranteed departures, and tailor-made
@@ -74,6 +85,7 @@
             <img class="about-image" src="img/build.jpg" alt="build">
         </div>
         <!--Tanya Tkach block end-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
      <script src="js/index.js"></script>
 </body>
 </html>
